--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "eslint --ext .jsx,.js src/ --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open --hot --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "re:watch": "rescript build -w"
   },
   "license": "MIT",
   "browserslist": "> 1%,last 2 versions",
@@ -22,13 +23,18 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
+    "@jsiebern/bs-material-ui": "^2.0.2",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@mscharley/bs-material-ui-icons": "^1.0.3",
     "autoprefixer": "^10.0.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-preset-env": "^1.7.0",
-    "css-loader": "^4.3.0",
+    "bs-platform": "^8.4.2",
+    "css-loader": "^6.6.0",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-config-react-app": "^5.2.1",
@@ -40,22 +46,30 @@
     "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-react-hooks": "^4.1.2",
     "file-loader": "^6.1.0",
+    "gentype": "^3.41.0",
     "html-webpack-plugin": "^4.5.0",
+    "lodash": "^4.17.20",
     "lodash-webpack-plugin": "^0.11.5",
     "postcss": "^8.1.1",
     "postcss-loader": "^4.0.3",
     "prettier": "^2.1.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "reason-react": "^0.9.1",
     "style-loader": "^1.2.1",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@rescript/react": "^0.10.3",
     "lodash": "^4.17.20",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "16.8.1",
+    "react-dom": "^16.13.1",
+    "rescript": "^9.1.4",
+    "rescript-material-ui": "^3.0.2",
+    "url-loader": "^4.1.1"
   }
 }
